--- a/mods/grass-overhaul.pw.toml
+++ b/mods/grass-overhaul.pw.toml
@@ -1,13 +1,13 @@
 name = "Grass Overhaul (Sod)"
-filename = "Grass_Overhaul-Forge-23.06.09_MC1.20.jar"
+filename = "Grass_Overhaul-Forge-23.10.10-MC1.20.1.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "cc0f9080fc637e52aa4919baa2a0e3e2d5d1dd8d"
+hash = "469b2a7ca65c52b1f7692e8f02885430d1107420"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4583813
+file-id = 4791837
 project-id = 640973
