--- a/mods/corpse.pw.toml
+++ b/mods/corpse.pw.toml
@@ -1,13 +1,13 @@
 name = "Corpse"
-filename = "corpse-1.20.1-1.0.5.jar"
+filename = "corpse-forge-1.20.1-1.0.10.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "686d772b62321ab3018851dc2c17ad34d0f5e513"
+hash = "64da572466f4bf31ae9a57a787feb13ac4684f35"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4678972
+file-id = 4973430
 project-id = 316582
