--- a/mods/skin-layers-3d.pw.toml
+++ b/mods/skin-layers-3d.pw.toml
@@ -1,13 +1,13 @@
 name = "Skin Layers 3D (Fabric/Forge)"
-filename = "3dskinlayers-forge-1.5.4-mc1.20.1.jar"
+filename = "skinlayers3d-forge-1.6.2-mc1.20.1.jar"
 side = "client"
 
 [download]
 hash-format = "sha1"
-hash = "f5441bddc89ff50145bea0cbb450a1d67e4d6a72"
+hash = "b0ad1fe442d5442a0758b5ac7a0a77e2f68b0967"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4630614
+file-id = 5021021
 project-id = 521480
