--- a/mods/sound-physics-remastered.pw.toml
+++ b/mods/sound-physics-remastered.pw.toml
@@ -1,13 +1,13 @@
 name = "Sound Physics Remastered"
-filename = "soundphysics-forge-1.20.1-1.2.1.jar"
+filename = "sound-physics-remastered-forge-1.20.1-1.3.1.jar"
 side = "client"
 
 [download]
 hash-format = "sha1"
-hash = "1eb52c50826d1c7a353e63ac28d01b478eaf2f7d"
+hash = "5805ae332ce632b3564280ada9f69d5eeca359ca"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4721571
+file-id = 4975922
 project-id = 535489
