--- a/mods/travelers-titles.pw.toml
+++ b/mods/travelers-titles.pw.toml
@@ -1,6 +1,6 @@
 name = "Traveler's Titles (Forge)"
 filename = "TravelersTitles-1.20-Forge-4.0.1.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
