--- a/mods/choicetheorems-overhauled-village.pw.toml
+++ b/mods/choicetheorems-overhauled-village.pw.toml
@@ -1,13 +1,13 @@
 name = "ChoiceTheorem's Overhauled Village"
-filename = "ctov-3.3.6.jar"
+filename = "[Forge]ctov-3.4.2.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "9fe2efeb1f2bff5309191c088437d0c6b4121e82"
+hash = "962782a5149aecfc19d1357db3112cc90baad252"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 4823685
+file-id = 5080010
 project-id = 623908
